# cloud-final

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
src/: config.py  deps.py  main.py  schemas.py
src/db/models/: base.py  todo.py
src/db/repositories/: base.py  todo.py
src/services/: file_upload.py  todo.py
