[project]
name = "tmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
